rework on RS Bridge fix #577 again